# genesis-core

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  TIER3_PROPOSAL.md  chain.toml  run.ps1  run.sh  rustfmt.toml  scientific_resolver.json  status.ps1  status.sh  test_chars.rs  test_parser.rs
.github/workflows/: ci.yml
charter/: README.md  enforcement.rs  system.md
compat/: Cargo.toml
compat/src/: lib.rs
docs/: 00_genesis_core_meta.md  01_cmp_v0.2.md  02_lying_calculator.md  03_architecture.md  04_workflow.md
docs/proposals/: clean_rerun_dataquality.md  new_module_addition_fix.md  v0.3_integration_testing.md
modules/advanced_math/: Cargo.toml
modules/advanced_math/src/: main.rs
modules/evaluator/: Cargo.toml
modules/evaluator/src/: main.rs  main.rs.bak
modules/math_expander/: Cargo.toml
modules/math_expander/src/: main.rs  main.rs.bak
modules/normalizer/: Cargo.toml
modules/normalizer/src/: main.rs  main.rs.bak
modules/parser/: Cargo.toml
modules/parser/src/: main.rs  main.rs.bak
modules/tokenizer/: Cargo.toml
modules/tokenizer/src/: main.rs  main.rs.bak
orchestrator/: Cargo.toml
orchestrator/src/: ai_backend.rs  attacker.rs  chain.rs  charter_runtime.rs  cmp_loop.rs  executor.rs  hot_swap.rs  ipc.rs  main.rs  metadata.rs  process.rs
orchestrator/tests/: chain_integration.rs  gemini_smoke.rs  ipc_chain_e2e.rs  seed_smoke.rs
scratch/: d449416_main.rs  fe12584_main.rs  hot_swap.rs  ipc.rs  test_ports.rs
src/: main.rs
test_tokenizer/src/: main.rs
