[workspace]
resolver = "2"
members = [
    "orchestrator",
    "modules/normalizer",
    "modules/tokenizer",
    "modules/parser",
    "modules/evaluator",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Yuya <yuya.ymd@gmail.com>"]
repository = "https://github.com/yui-synth-lab/genesis-core"
publish = false

[workspace.dependencies]
# 非同期ランタイム
tokio = { version = "1.40", features = ["full"] }

# シリアライズ
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# エラー型
thiserror = "1.0"
anyhow = "1.0"

# ログ
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# 時刻
chrono = { version = "0.4", features = ["serde"] }

# orchestrator 専用 (各 module には不要)
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
toml = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
